<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.VideoDetailActivity"
    android:background="@color/black">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_video"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/muhandojeon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="[무한도전] 존버당!! 요즘따라 뒷담인 듯 뒷담 아닌 뒷담 같은 너 ~ 앞담인지 헷갈리는 뒷담화 모음집"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cv_video"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cv_video"
        app:layout_constraintTop_toBottomOf="@+id/cv_video" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_add_mylist"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/add_selector"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_like"
        app:layout_constraintEnd_toStartOf="@+id/btn_like"
        app:layout_constraintTop_toTopOf="@+id/btn_like" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_like"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/like_selector"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Share"
        app:layout_constraintEnd_toStartOf="@+id/btn_Share"
        app:layout_constraintTop_toTopOf="@+id/btn_Share" />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/detail_like_icon"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_like"
        app:layout_constraintStart_toStartOf="@+id/btn_like"
        app:layout_constraintTop_toBottomOf="@+id/btn_Share" />

    <TextView
        android:id="@+id/tv_mylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/detail_mylist_icon"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_mylist"
        app:layout_constraintStart_toStartOf="@+id/btn_add_mylist"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_mylist" />

    <Button
        android:id="@+id/btn_Share"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="@+id/cv_video"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/detail_share_icon"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_Share"
        app:layout_constraintStart_toStartOf="@+id/btn_Share"
        app:layout_constraintTop_toBottomOf="@+id/btn_Share" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_like" />


</androidx.constraintlayout.widget.ConstraintLayout>